@@ -8,12 +8,15 @@
 # Example: MP3 "C:/ioFTPD/site/MP3/%m%d/"
 #
 # Date Cookies:
-#  %% - Percent Sign
-#  %d - Day
-#  %V - Week
-#  %m - Month
-#  %y - Year, two digits (04)
-#  %Y - Year, four digits (2004)
+#  %% - Percent sign    (%)
+#  %d - Day             (1-31)
+#  %w - Week            (1-53)
+#  %m - Month           (1-12)
+#  %y - Year            (04)
+#  %D - Day w/padding   (01-31)
+#  %W - Week w/padding  (01-53)
+#  %M - Month w/padding (01-12)
+#  %Y - Year w/century  (2004)
 #
 # Description:
 #  - Areas and destination paths to send pre's.
@@ -44,12 +47,12 @@
 [AREAS]
 XXX "E:/ioFTPD/site/XXX/"
 SVCD "E:/ioFTPD/site/SVCD/"
-MP3 "E:/ioFTPD/site/MP3/%m%d/"
+MP3 "E:/ioFTPD/site/MP3/%M%D/"
 APPS "E:/ioFTPD/site/APPS/"
 VCD "E:/ioFTPD/site/VCD/"
 GAMES "E:/ioFTPD/site/SVCD/"
 TV "E:/ioFTPD/site/TV/"
-0DAY "E:/ioFTPD/site/0DAY/%m%d/"
+0DAY "E:/ioFTPD/site/0DAY/%M%D/"
 XVID "E:/ioFTPD/site/XVID/"
 
 [GROUPS]
