@@ -366,18 +366,21 @@ set latest(Exempts) {
 #   Chmod         - The chmod value to use for the created directory.
 #
 # - Date cookies:
-#   %% - Percent Sign
-#   %d - Day
-#   %V - Week
-#   %m - Month
-#   %y - Year, two digits (04)
-#   %Y - Year, four digits (2004)
+#   %% - Percent sign    (%)
+#   %d - Day             (1-31)
+#   %w - Week            (1-53)
+#   %m - Month           (1-12)
+#   %y - Year            (04)
+#   %D - Day w/padding   (01-31)
+#   %W - Week w/padding  (01-53)
+#   %M - Month w/padding (01-12)
+#   %Y - Year w/century  (2004)
 #
 set newdate(Default) {
-  {0DAY {New 0DAY}   {/0DAY/%m%d} {E:/ioFTPD/site/0DAY/%m%d} {E:/ioFTPD/site/Today-0DAY}     True   0 0 0 777}
-  {0DAY {Close 0DAY} {/0DAY/%m%d} {E:/ioFTPD/site/0DAY/%m%d} {E:/ioFTPD/site/Yesterday-0DAY} False -1 0 0 555}
-  {MP3  {New MP3}    {/MP3/%m%d}  {E:/ioFTPD/site/MP3/%m%d}  {E:/ioFTPD/site/Today-MP3}      True   0 0 0 777}
-  {MP3  {Close MP3}  {/MP3/%m%d}  {E:/ioFTPD/site/MP3/%m%d}  {E:/ioFTPD/site/Yesterday-MP3}  False -1 0 0 555}
+  {0DAY {New 0DAY}   {/0DAY/%M%D} {E:/ioFTPD/site/0DAY/%M%D} {E:/ioFTPD/site/Today-0DAY}     True   0 0 0 777}
+  {0DAY {Close 0DAY} {/0DAY/%M%D} {E:/ioFTPD/site/0DAY/%M%D} {E:/ioFTPD/site/Yesterday-0DAY} False -1 0 0 555}
+  {MP3  {New MP3}    {/MP3/%M%D}  {E:/ioFTPD/site/MP3/%M%D}  {E:/ioFTPD/site/Today-MP3}      True   0 0 0 777}
+  {MP3  {Close MP3}  {/MP3/%M%D}  {E:/ioFTPD/site/MP3/%M%D}  {E:/ioFTPD/site/Yesterday-MP3}  False -1 0 0 555}
 }
 #
 # - Rather then closing the previous date directories at the same time as creating the next days,
@@ -385,8 +388,8 @@ set newdate(Default) {
 # - Scheduler: nxCloseDate = 0 1 * * TCL ..\scripts\nxTools\nxUtilities.tcl NEWDATE CloseDate
 #
 set newdate(CloseDate) {
-  {0DAY {Close 0DAY} {/0DAY/%m%d} {E:/ioFTPD/site/0DAY/%m%d} {E:/ioFTPD/site/Yesterday-0DAY} False -1 0 0 555}
-  {MP3  {Close MP3}  {/MP3/%m%d}  {E:/ioFTPD/site/MP3/%m%d}  {E:/ioFTPD/site/Yesterday-MP3}  False -1 0 0 555}
+  {0DAY {Close 0DAY} {/0DAY/%M%D} {E:/ioFTPD/site/0DAY/%M%D} {E:/ioFTPD/site/Yesterday-0DAY} False -1 0 0 555}
+  {MP3  {Close MP3}  {/MP3/%M%D}  {E:/ioFTPD/site/MP3/%M%D}  {E:/ioFTPD/site/Yesterday-MP3}  False -1 0 0 555}
 }
 
 #### Weekly Credits ########################################
