@@ -3,8 +3,9 @@
 ################################################################################
 
 nxTools v1.1.2 (Not released):
+  NEW: New date cookie system for newdate and pre paths.
   FIX: Dupe rebuilds ignored directories older than "dupe(CleanDirs)".
-  FIX: Use "%V" instead of "%W" for week date cookies.
+  FIX: The "%W" date cookie started at "00".
 
 nxTools v1.1.1 (Mar 22, 2008):
   NEW: Extended help information for "SITE EDITPRE HELP VIEW".
